[gd_scene load_steps=16 format=3 uid="uid://cotlnwk1de3o2"]

[ext_resource type="Theme" uid="uid://cclle0dpqo4th" path="res://tabs.tres" id="1_jeykb"]
[ext_resource type="Script" path="res://scripts/tabs.gd" id="2_2xeev"]
[ext_resource type="Script" path="res://scripts/tab_container.gd" id="3_gflge"]
[ext_resource type="Texture2D" uid="uid://d36eo8k0b53u1" path="res://assets/graphics/emusRus_icon.png" id="4_muub3"]
[ext_resource type="Texture2D" uid="uid://c52gya30ywtxx" path="res://assets/graphics/systems/org.es_de.frontend.svg" id="5_vko13"]
[ext_resource type="Texture2D" uid="uid://6hohjg8ur87n" path="res://assets/graphics/systems/retroarch_inv.svg" id="6_lpg7x"]
[ext_resource type="Texture2D" uid="uid://deea32nm8koq8" path="res://assets/fonts/fontawesome-free-6.6.0-desktop/svgs/solid/cloud-bolt.svg" id="7_5x7v1"]
[ext_resource type="Texture2D" uid="uid://wv51ocaxvy1p" path="res://assets/fonts/fontawesome-free-6.6.0-desktop/svgs/solid/cloud-arrow-up.svg" id="8_c45qo"]
[ext_resource type="Texture2D" uid="uid://cvs3spcpmdlfa" path="res://icon.svg" id="9_mkfuh"]
[ext_resource type="Texture2D" uid="uid://dudgv0s5bkfde" path="res://assets/fonts/fontawesome-free-6.6.0-desktop/svgs/solid/cloud-arrow-down.svg" id="10_x1dqk"]
[ext_resource type="FontFile" uid="uid://d0hjgpqa7fyei" path="res://assets/fonts/toys_r_us.ttf" id="11_pkggn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ab3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi6a8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2xxn"]
bg_color = Color(0.054902, 0.152941, 0.568627, 0.356863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cu0l4"]
bg_color = Color(0.348983, 0.59231, 0.993138, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchor_top = 0.178
anchor_right = 0.968
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -6.24001
offset_right = 61.4399
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_jeykb")
script = ExtResource("2_2xeev")

[node name="TabContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.812963
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
script = ExtResource("3_gflge")
metadata/_edit_use_anchors_ = true

[node name="START" type="SplitContainer" parent="TabContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_grab_thickness = 600
split_offset = 300
dragger_visibility = 1
metadata/_tab_index = 0

[node name="Panel" type="Panel" parent="TabContainer/START"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/START/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.01333
anchor_bottom = 0.803311
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="TabContainer/START/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25

[node name="emusrus_button" type="Button" parent="TabContainer/START/Panel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/icon_max_width = 64
text = "EMULATORS R US "
icon = ExtResource("4_muub3")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="es_de_button" type="Button" parent="TabContainer/START/Panel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 64
text = "ES-DE default is ~/ES-DE"
icon = ExtResource("5_vko13")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="retroarch_button" type="Button" parent="TabContainer/START/Panel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/icon_max_width = 64
text = "RETROARCH"
icon = ExtResource("6_lpg7x")
icon_alignment = 1
vertical_icon_alignment = 2

[node name="Panel2" type="Panel" parent="TabContainer/START"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8ab3o")

[node name="status_margin" type="MarginContainer" parent="TabContainer/START/Panel2"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 341.0
offset_bottom = 274.0

[node name="emusrus_vbox" type="VBoxContainer" parent="TabContainer/START/Panel2/status_margin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fi6a8")
text = "EMULATORS R US - SUMMARY SCREEN"

[node name="Label2" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fi6a8")
text = "DETECTED SYSTEM INFORMATION:"

[node name="GridContainer" type="GridContainer" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 3
columns = 2

[node name="hostname_label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
layout_mode = 2
text = "HOST NAME:"

[node name="hostname" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="os_type_label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
layout_mode = 2
text = "OS:"

[node name="os_type" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="os_distro_label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
layout_mode = 2
text = "DISTRO:"

[node name="os_distro" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="os_versio_label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
layout_mode = 2
text = "OS VERSION:"

[node name="os_version" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 3
columns = 2

[node name="hostname_label" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2"]
layout_mode = 2
text = "CLOUD SYNC ENABLED:"

[node name="hostname" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2"]
layout_mode = 2

[node name="hostname_label2" type="Label" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2"]
layout_mode = 2
text = "IF NOT ENABLED/Button to jump/check
CLOUD SYNC SERVICE STATUS
CLOUD SYNC LOG"

[node name="CheckButton" type="CheckButton" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("7_5x7v1")

[node name="download_button" type="Button" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "DOWNLOAD EMULATOR"

[node name="download_ProgressBar" type="ProgressBar" parent="TabContainer/START/Panel2/status_margin/emusrus_vbox/GridContainer2/download_button"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_i2xxn")
show_percentage = false

[node name="retroarch_vbox" type="VBoxContainer" parent="TabContainer/START/Panel2/status_margin"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fi6a8")
text = "RETROARCH - SUMMARY SCREEN"

[node name="Label2" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fi6a8")
text = "DETECTED SYSTEM INFORMATION:"

[node name="paths_button" type="Button" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox"]
layout_mode = 2
text = "CHANGE PATHS"

[node name="GridContainer" type="GridContainer" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 3
columns = 2

[node name="retroarch_path_label" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox/GridContainer"]
layout_mode = 2
text = "RetroArch Path:"

[node name="retroarch_path" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="retroarch_valid_label" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox/GridContainer"]
layout_mode = 2
text = "RetroArch Found:"

[node name="retroarch_valid" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="TabContainer/START/Panel2/status_margin/retroarch_vbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_fi6a8")
text = "DETECTED SAVES"

[node name="TabContainer" type="TabContainer" parent="TabContainer/START/Panel2"]
visible = false
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = -4.00006
current_tab = 0

[node name="Screen1" type="MarginContainer" parent="TabContainer/START/Panel2/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Screen2" type="MarginContainer" parent="TabContainer/START/Panel2/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SETTINGS" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="BACKUPS" type="VBoxContainer" parent="TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="backups_button" type="Button" parent="TabContainer/BACKUPS"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "BACKUPS"
icon = ExtResource("8_c45qo")

[node name="backups_gc" type="GridContainer" parent="TabContainer/BACKUPS"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="backup_1" type="Button" parent="TabContainer/BACKUPS/backups_gc"]
unique_name_in_owner = true
layout_mode = 2
text = "SETUP
CONFIG
Do not show other buttons uness done.
Show spinner finished?"
icon = ExtResource("9_mkfuh")

[node name="backup_2" type="Button" parent="TabContainer/BACKUPS/backups_gc"]
unique_name_in_owner = true
layout_mode = 2
text = "TEST
CONNECTION"
icon = ExtResource("9_mkfuh")

[node name="Button3" type="Button" parent="TabContainer/BACKUPS/backups_gc"]
layout_mode = 2
text = "BACKUP"
icon = ExtResource("9_mkfuh")

[node name="restore_button" type="Button" parent="TabContainer/BACKUPS"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "RESTORE"
icon = ExtResource("10_x1dqk")

[node name="restore_gc" type="GridContainer" parent="TabContainer/BACKUPS"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="TabContainer/BACKUPS/restore_gc"]
layout_mode = 2
text = "SETUP
CONFIG"
icon = ExtResource("9_mkfuh")

[node name="Button2" type="Button" parent="TabContainer/BACKUPS/restore_gc"]
layout_mode = 2
text = "TEST
CONNECTION"
icon = ExtResource("9_mkfuh")

[node name="Button3" type="Button" parent="TabContainer/BACKUPS/restore_gc"]
layout_mode = 2
text = "BACKUP"
icon = ExtResource("9_mkfuh")

[node name="Button4" type="Button" parent="TabContainer/BACKUPS/restore_gc"]
layout_mode = 2
text = "RESTORE
rclone config --config=rclone_emu.conf update emusRus_GoogleDrive"
icon = ExtResource("9_mkfuh")

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/BACKUPS"]
layout_mode = 2
size_flags_vertical = 3
text = "bob"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.810185
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_cu0l4")
text = "WELCOME to EMUS R US

- MANUAL FIX
- SELECT ONE/BOTH
- LINK/DOWNLOAD

NONE INSTALLED
LINKS OR DOWNLOAD?"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
use_threads = true
timeout = 30.0

[node name="download_timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.202461
anchor_right = 1.00052
anchor_bottom = -0.0033557
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 3.0
offset_right = -1013.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("11_pkggn")
theme_override_font_sizes/normal_font_size = 155
bbcode_enabled = true
text = "[color=#f00000]E[/color][color=#0e16bd]M[/color][color=#00ea00]U[/color][color=#f00000]S[/color] [color=#00ea00]'[/color][color=#ff510a]R[/color][color=#00ea00]'[/color] [color=#00ea00]U[/color][color=#f00000]S[/color]"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.481
anchor_top = 0.034
anchor_right = 1.0
anchor_bottom = 1.212
offset_left = -0.0391235
offset_top = -0.0520005
offset_right = -3.00012
offset_bottom = -37.736

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 54
text = "
Putting the fun back into emulation."
